# cfd

./: .gitignore  Dockerfile  README.md  build.sh  main.py  pyproject.toml  run.sh
data/smoke_plume/: dye0.pt  f0.pt  p0.pt  u0.pt
example/: circle.yaml  rect.yaml
src/cfd/: config.yaml  field.py  geometry.py  sim.py  utils.py
